<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/main_view"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@mipmap/ic_logo_round"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:src="@mipmap/ic_logo_round"/>
        <EditText
            android:id="@+id/etWriteName"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/selector_edittext"
            android:hint="@string/name"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="15sp"
            android:focusableInTouchMode="true"
            android:inputType="textCapWords"/>
    <EditText
        android:id="@+id/etWriteEmail"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/selector_edittext"
        android:hint="@string/email"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="15sp"
        android:focusableInTouchMode="true"
        android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/etWritePassword"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/selector_edittext"
            android:hint="@string/password"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="15sp"
            android:focusableInTouchMode="true"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_round_signup"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
        <TextView
            android:id="@+id/tvGoToSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/gotoSignIn"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center_horizontal"/>
    </LinearLayout>

</RelativeLayout>