<androidx.cardview.widget.CardView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="5dp"
    card_view:contentPadding="5dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardMaxElevation="5dp"
    android:layout_margin="5dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/upperLayout">
    <ImageView
        android:id="@+id/appImage"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"/>
    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="5dp"
        android:paddingLeft="10dp"
        android:paddingBottom="5dp"
        android:textStyle="bold"
        android:text="@string/dummy_name"
        android:layout_toRightOf="@id/appImage"
        android:layout_centerVertical="true"/>

    <CheckBox
        android:id="@+id/appCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="8dp"/>
</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AppsUsageLayout">
        <TextView
            android:id="@+id/appLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:paddingBottom="5dp"
            android:textStyle="bold"
            android:text="@string/dummy_log"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:textStyle="bold"
            android:text="@string/last365days"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:indeterminate="false"
            android:max="1000"
            android:progress="100"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>