<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectTime">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
    <Button
        android:id="@+id/btnStartDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_round_signup"
        android:text="@string/startDate"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:padding="8dp"
        android:layout_weight="1"
        android:layout_margin="4dp"/>
    <TextView
        android:id="@+id/tvStartDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/startDate"
        android:layout_weight="1"
        android:layout_margin="4dp"
        android:gravity="center"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:id="@+id/startTimeLayout"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/btnStartTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_round_signup"
                android:text="@string/startTime"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_weight="1"
                android:layout_margin="4dp"/>
            <TextView
                android:id="@+id/tvStartTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/startTime"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/btnEndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_round_signup"
                android:text="@string/endDate"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_weight="1"
                android:layout_margin="4dp"/>
            <TextView
                android:id="@+id/tvEndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/endDate"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:gravity="center"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_below="@id/startTimeLayout"
        android:layout_marginTop="10dp"
        android:id="@+id/endTimeLayout">
        <Button
            android:id="@+id/btnEndTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_round_signup"
            android:text="@string/endTime"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:layout_weight="1"
            android:layout_margin="4dp"/>
        <TextView
            android:id="@+id/tvEndTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/endTime"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:gravity="center"/>
    </LinearLayout>
        <Button
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_round_signup"
            android:text="Start App lock"
            android:layout_below="@id/endTimeLayout"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:padding="10dp"/>
    </LinearLayout>
</RelativeLayout>